<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.www.nfcbusinesscardlocal.MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/city_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="9"
        android:background="@color/lightblue"
        android:padding="@dimen/lesspadding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center">
            <!--<ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/header"/>-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="3"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/ic_send"
                android:onClick="openSendCard"
                android:padding="@dimen/minpadding"
                android:text="@string/sendcard"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize"
                android:textStyle="bold" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:padding="@dimen/minpadding"
                android:text="@string/receivecard"
                android:textSize="@dimen/textsize"
                android:textStyle="bold"
                android:onClick="openReceiveCard"
                android:drawableTop="@drawable/ic_receive"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:text="@string/managecards"
                android:textSize="@dimen/textsize"
                android:textStyle="bold"
                android:padding="@dimen/minpadding"
                android:drawableTop="@drawable/ic_manage_card"
                android:onClick="openManageCards"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:weightSum="3"
            android:background="@drawable/profile_border"
            android:padding="@dimen/minpadding"
            android:onClick="openViewDetails">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/main_pic"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_person"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="@dimen/minpadding"
                android:weightSum="4">

                <TextView
                    android:id="@+id/main_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/main_surname"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/main_job"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_work_sort"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="end">

                    <Button
                        android:id="@+id/view_details"
                        android:layout_width="@dimen/signoutbtn"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_view_more"
                        android:onClick="openViewDetails" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/read_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="openReadNFCCard"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:text="@string/edit_nfc"
                android:textSize="@dimen/textsize"
                android:padding="@dimen/minpadding"
                android:textStyle="bold"
                android:drawableTop="@drawable/ic_nfc_card"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical">
                <Button
                    android:id="@+id/btn_signout"
                    android:layout_width="@dimen/signoutbtn"
                    android:layout_height="@dimen/signoutbtn"
                    android:background="@drawable/ic_sign_out"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
