<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@mipmap/city_background"
    tools:context="com.example.www.nfcbusinesscardlocal.updateDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        android:orientation="vertical"
        android:background="@color/lightblue"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center">
            <ImageView
                android:id="@+id/avatarpic"
                android:layout_width="@dimen/profilePicture"
                android:layout_height="@dimen/profilepic"
                android:src="@drawable/ic_person"/>
            <Button
                android:id="@+id/btn_open_upload"
                android:layout_marginTop="25dp"
                android:layout_width="@dimen/signoutbtn"
                android:layout_height="@dimen/signoutbtn"
                android:background="@drawable/ic_change_image"
                />
        </LinearLayout>

        <!-- Name Label -->
        <EditText android:id="@+id/update_input_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Full Name" />
        <!-- Name Label -->
        <EditText android:id="@+id/update_input_jobtitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textAutoCorrect|textCapSentences"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Job Title" />
        <!-- Name Label -->
        <EditText android:id="@+id/update_input_companyname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textCapSentences"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Company Name" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10">
            <EditText android:id="@+id/update_input_address"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPostalAddress"
                android:hint="Work Address" />
            <Button
                android:id="@+id/update_button"
                android:layout_width="@dimen/signoutbtn"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:textStyle="bold"
                android:textSize="@dimen/padding"
                android:textColor="@color/white"
                android:background="@drawable/ic_edit_location"
                />
        </LinearLayout>
        <!--Website-->
        <EditText
            android:id="@+id/update_input_web"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="Website"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textWebEditText"/>
        <!--work number-->
        <EditText android:id="@+id/update_input_telephone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Telephone Number" />
        <!-- mobile number -->
        <EditText android:id="@+id/update_input_mobile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Mobile Number" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/lesspadding"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize"
                android:onClick="updateUser"
                android:drawableRight="@drawable/ic_done"
                android:text="@string/update_account"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
