...
                        android:layout_weight="1"
                        android:textSize="@dimen/textsize"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:id="@+id/jobtitle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="@dimen/textsize"
                        android:textColor="@color/white"
                        android:drawableEnd="@drawable/ic_work_sort"
...
                    android:gravity="center_vertical|center_horizontal"
                    android:autoLink="web"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:drawableEnd="@drawable/ic_website"/>
                <TextView
                    android:id="@+id/personalnumber"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textsize"
                    android:gravity="center_vertical|center_horizontal"
                    android:autoLink="phone"
...
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|bottom">

                <Button
                    android:id="@+id/edit_details"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/signoutbtn"
                    android:background="@color/transparent"
                    android:drawableEnd="@drawable/ic_edit_details"
                    android:onClick="openUpdateDetails"
                    android:textColor="@color/white"
...
